# cpp-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: header_only_lib.hpp  lib.cpp  lib.hpp  main.cpp  main2.cpp
test/: CMakeLists.txt  hello_test.cpp
